# thin-ops

./: .env.example  .npmrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  renovate.json
.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.yaml
.github/: dependabot.yaml
backend/: main.py  pyproject.toml  requirements.txt  test_api.py  test_api.sh
backend/app/: config.py
backend/app/api/v1/: __init__.py  config.py  deps.py  export_destinations.py  providers.py
backend/app/models/: __init__.py  auth.py  billing_data.py  export_destination.py  export_run.py  pipeline_run.py  provider.py
backend/app/schemas/: auth.py  config.py  export_destination.py  provider.py
backend/app/services/: encryption_service.py  export_destination_service.py  provider_service.py
backend/export_destinations/: __init__.py  base.py  registry.py
backend/export_destinations/bigquery/: __init__.py  auth.py  destination.py
backend/export_pipeline/: __init__.py  orchestrator.py
backend/export_pipeline/stages/: __init__.py  export.py  prepare.py  verify.py
backend/focus/: spec.py
backend/migrations/: init.sql  init_sqlite.sql
backend/pipeline/: config.py
backend/pipeline/stages/: base.py
backend/scripts/: populate_database_from_csv.py
backend/tests/: test_main.py
backend/tests/unit/: test_config.py
backend/tests/unit/pipeline/: test_stages_base.py
backend/tests/unit/providers/aws/: test_aws_auth.py
backend/tests/unit/providers/gcp/: test_gcp_auth.py
backend/tests/unit/providers/openai/: test_openai_auth.py
backend/tests/unit/services/: test_encryption_service.py
docs/: .mintignore  docs.json  (+3 more)
(+55 files in other folders)
